--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,13 @@ html {
   font-size: 1rem;
   color: hsl(292, 42%, 14%);
 }
+.question h4:hover {
+  color: #9f34e3;
+  cursor: pointer;
+}
+.question img:hover {
+  cursor: pointer;
+}
 .answer {
   display: none;
   margin-bottom: 1rem;
